--- a/style.css
+++ b/style.css
@@ -5,33 +5,33 @@
 
 body {
     height: 100vh;
+    overflow: hidden;
+
 }
 
 #page {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    height: 100%;
-    place-content: center;
+    height: 100vh;
+    /* place-content: center; */
 }
 #leftside {
-    width: 100%;
-    height: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    /* justify-items: center; */
+
 }
 
 
 @keyframes spin {
     0% {
-        rotate: 0;
+        /* rotate: 0; */
+        transform: rotate(0);
     }
     50% {
-        rotate: 180deg;
+        transform: rotate(180deg);
+        /* rotate: 180deg; */
     }
     100% {
-        rotate: 360deg;
+        transform: rotate(360deg);
+        /* rotate: 360deg; */
     }
 }
 @keyframes pulse {
@@ -46,6 +46,21 @@ body {
     }
 }
 
+.clicked_cookie {
+    animation: clicked 100ms;
+}
+@keyframes clicked {
+    0% {
+        scale: 1;
+    }
+    10% {
+        scale: .9;
+    }
+    100% {
+        scale: 1;
+    }
+}
+
 #stats {
     background-color: rgba(0, 0, 0, 0.6);
     border-radius: 20px;
@@ -55,28 +70,56 @@ body {
 }
 #kaka {
     cursor:pointer;
-    /* transform: scale(.2); */
-    width: 50%;
+    width: 60%;
     --speed: 6000ms;
-    animation: pulse var(--speed) infinite, spin var(--speed) infinite linear, hover var(--speed) infinite;
+    animation: pulse 6000ms infinite, spin 6000ms infinite linear, hover 6000ms infinite; /* använder inte --speed variabeln just nu då den får animationen att hacka till varje gång --speed ändras. */
     margin: auto;
     align-self: center;
     image-rendering: pixelated;
     display: block;
+    /* position: absolute; */
+    margin: auto;
+}
+#CPS-progress-frame {
+    width: 40%;
+    height: 30px;
+    background-color: black;
+    border-radius: 10px;
+    margin: auto;
+    margin-top: 50px;
+    padding: 5px;
+    display: none;
+}
+#CPS-progress {
+    height: 100%;
+    border-radius: 5px;
+    background-color: green;
+}
+.progress-CPS {
+    animation: progressbar 1000ms infinite linear;
+}
+@keyframes progressbar {
+    0% {
+        width: 0%;
+    }
+    100% {
+        width: 100%;
+    }
 }
 
 #rightside {
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 
 #store {
     
-    height: 60%;
+    /* height: 60%; */
     background-color: rgba(0, 0, 0, .6);
     border-radius: 30px;
     color: wheat;
     padding: 40px;
+    /* overflow-y: scroll; */
 }
 
 .purchasable_item {
@@ -86,6 +129,10 @@ body {
     border-radius: 30px;
     transition: all 100ms;
     cursor:pointer;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .purchasable_item:hover {
