--- a/style.css
+++ b/style.css
@@ -134,18 +134,22 @@ body {
     justify-content: space-between;
     align-items: center;
 }
-
 .purchasable_item:hover {
     transform: scale(1.01);
     background-color: rgba(0, 0, 0, .65);
 }
+.price {
+    padding: 10px;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, .1);
+}
 .activate_powerup {
     /* display: none; */
-    animation: yourAnimation 1000ms ease-in-out;
+    animation: purchase_item 1000ms ease-in-out;
 }
 
 
-@keyframes yourAnimation{
+@keyframes purchase_item {
     0% {
         background-color: rgba(255, 255, 255, 0.8);
     }
@@ -157,5 +161,25 @@ body {
     100% {
         color: rgba(0, 0, 0, 0);
         transform:  translate(0px, 150vh) rotate(-30deg);
+    }
+}
+
+.purchase_denied {
+    animation: purchase_denied 200ms linear;
+}
+@keyframes purchase_denied {
+    10% {
+        background-color: rgba(50, 0, 0, .65);
+        transform: translate(20px, 0);
+    }
+    35% {
+        transform: translate(-20px, 0);
+    }
+    60% {
+        transform: translate(20px, 0);
+        background-color: rgba(0, 0, 0, .65);
+    }
+    100% {
+        transform: translate(0, 0);
     }
 }
