--- a/style.css
+++ b/style.css
@@ -118,14 +118,14 @@ body {
     grid-area: powerups;
 }
 .powerup {
-    height: 32px;
+    height: 48px;
     image-rendering: pixelated;
     cursor: pointer;
 }
 #powerup_information_hoverview {
     position: absolute;
-    width: 200px;
-    height: 50px;
+    width: 300px;
+    /* height: 80px; */
     padding: 10px;
     border-radius: 7px;
     background-color: #663931;
@@ -138,6 +138,8 @@ body {
     height: 50px;
     width: fit-content;
     margin-right: 10px;
+    margin-top: auto;
+    margin-bottom: auto;
 }
 
 
